sintatico.output
Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 $@3: %empty

    4 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos $@3 T_FIM

    5 cabecalho: T_PROGRAMA T_IDENTIF

    6 variaveis: %empty
    7          | declaracao_variaveis

    8 declaracao_variaveis: declaracao_variaveis tipo lista_variaveis
    9                     | tipo lista_variaveis

   10 tipo: T_LOGICO
   11     | T_INTEIRO

   12 lista_variaveis: lista_variaveis T_IDENTIF
   13                | T_IDENTIF

   14 lista_comandos: %empty
   15               | comando lista_comandos

   16 comando: entrada_saida
   17        | repeticao
   18        | selecao
   19        | atribuicao

   20 entrada_saida: leitura
   21              | escrita

   22 leitura: T_LEIA T_IDENTIF

   23 escrita: T_ESCREVA expressao

   24 $@4: %empty

   25 $@5: %empty

   26 repeticao: T_ENQTO $@4 expressao T_FACA $@5 lista_comandos T_FIMENQTO

   27 $@6: %empty

   28 $@7: %empty

   29 selecao: T_SE expressao $@6 T_ENTAO lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

   30 $@8: %empty

   31 $@9: %empty

   32 atribuicao: T_IDENTIF $@8 T_ATRIB $@9 expressao

   33 expressao: expressao T_VEZES expressao
   34          | expressao T_DIV expressao
   35          | expressao T_MAIS expressao
   36          | expressao T_MENOS expressao
   37          | expressao T_MAIOR expressao
   38          | expressao T_MENOR expressao
   39          | expressao T_IGUAL expressao
   40          | expressao T_E expressao
   41          | expressao T_OU expressao
   42          | termo

   43 termo: T_IDENTIF
   44      | T_NUMERO
   45      | T_V
   46      | T_F
   47      | T_NAO termo
   48      | T_ABRE expressao T_FECHA


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
T_PROGRAMA (258) 5
T_INICIO (259) 4
T_FIM (260) 4
T_IDENTIF (261) 5 12 13 22 32 43
T_LEIA (262) 22
T_ESCREVA (263) 23
T_ENQTO (264) 26
T_FACA (265) 26
T_FIMENQTO (266) 26
T_SE (267) 29
T_ENTAO (268) 29
T_SENAO (269) 29
T_FIMSE (270) 29
T_ATRIB (271) 32
T_VEZES (272) 33
T_DIV (273) 34
T_MAIS (274) 35
T_MENOS (275) 36
T_MAIOR (276) 37
T_MENOR (277) 38
T_IGUAL (278) 39
T_E (279) 40
T_OU (280) 41
T_V (281) 45
T_F (282) 46
T_NUMERO (283) 44
T_NAO (284) 47
T_ABRE (285) 48
T_FECHA (286) 48
T_LOGICO (287) 10
T_INTEIRO (288) 11


Não-terminais com as regras onde eles aparecem

$accept (34)
    à esquerda: 0
programa (35)
    à esquerda: 4, à direita: 0
$@1 (36)
    à esquerda: 1, à direita: 4
$@2 (37)
    à esquerda: 2, à direita: 4
$@3 (38)
    à esquerda: 3, à direita: 4
cabecalho (39)
    à esquerda: 5, à direita: 4
variaveis (40)
    à esquerda: 6 7, à direita: 4
declaracao_variaveis (41)
    à esquerda: 8 9, à direita: 7 8
tipo (42)
    à esquerda: 10 11, à direita: 8 9
lista_variaveis (43)
    à esquerda: 12 13, à direita: 8 9 12
lista_comandos (44)
    à esquerda: 14 15, à direita: 4 15 26 29
comando (45)
    à esquerda: 16 17 18 19, à direita: 15
entrada_saida (46)
    à esquerda: 20 21, à direita: 16
leitura (47)
    à esquerda: 22, à direita: 20
escrita (48)
    à esquerda: 23, à direita: 21
repeticao (49)
    à esquerda: 26, à direita: 17
$@4 (50)
    à esquerda: 24, à direita: 26
$@5 (51)
    à esquerda: 25, à direita: 26
selecao (52)
    à esquerda: 29, à direita: 18
$@6 (53)
    à esquerda: 27, à direita: 29
$@7 (54)
    à esquerda: 28, à direita: 29
atribuicao (55)
    à esquerda: 32, à direita: 19
$@8 (56)
    à esquerda: 30, à direita: 32
$@9 (57)
    à esquerda: 31, à direita: 32
expressao (58)
    à esquerda: 33 34 35 36 37 38 39 40 41 42, à direita: 23 26 29
    32 33 34 35 36 37 38 39 40 41 48
termo (59)
    à esquerda: 43 44 45 46 47 48, à direita: 42 47


State 0

    0 $accept: . programa $end

    T_PROGRAMA  deslocar, e ir ao estado 1

    programa   ir ao estado 2
    cabecalho  ir ao estado 3


State 1

    5 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 4


State 2

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 5


State 3

    4 programa: cabecalho . $@1 variaveis $@2 T_INICIO lista_comandos $@3 T_FIM

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 6


State 4

    5 cabecalho: T_PROGRAMA T_IDENTIF .

    $padrão  reduzir usando a regra 5 (cabecalho)


State 5

    0 $accept: programa $end .

    $padrão  aceitar


State 6

    4 programa: cabecalho $@1 . variaveis $@2 T_INICIO lista_comandos $@3 T_FIM

    T_LOGICO   deslocar, e ir ao estado 7
    T_INTEIRO  deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 6 (variaveis)

    variaveis             ir ao estado 9
    declaracao_variaveis  ir ao estado 10
    tipo                  ir ao estado 11


State 7

   10 tipo: T_LOGICO .

    $padrão  reduzir usando a regra 10 (tipo)


State 8

   11 tipo: T_INTEIRO .

    $padrão  reduzir usando a regra 11 (tipo)


State 9

    4 programa: cabecalho $@1 variaveis . $@2 T_INICIO lista_comandos $@3 T_FIM

    $padrão  reduzir usando a regra 2 ($@2)

    $@2  ir ao estado 12


State 10

    7 variaveis: declaracao_variaveis .
    8 declaracao_variaveis: declaracao_variaveis . tipo lista_variaveis

    T_LOGICO   deslocar, e ir ao estado 7
    T_INTEIRO  deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 7 (variaveis)

    tipo  ir ao estado 13


State 11

    9 declaracao_variaveis: tipo . lista_variaveis

    T_IDENTIF  deslocar, e ir ao estado 14

    lista_variaveis  ir ao estado 15


State 12

    4 programa: cabecalho $@1 variaveis $@2 . T_INICIO lista_comandos $@3 T_FIM

    T_INICIO  deslocar, e ir ao estado 16


State 13

    8 declaracao_variaveis: declaracao_variaveis tipo . lista_variaveis

    T_IDENTIF  deslocar, e ir ao estado 14

    lista_variaveis  ir ao estado 17


State 14

   13 lista_variaveis: T_IDENTIF .

    $padrão  reduzir usando a regra 13 (lista_variaveis)


State 15

    9 declaracao_variaveis: tipo lista_variaveis .
   12 lista_variaveis: lista_variaveis . T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 18

    $padrão  reduzir usando a regra 9 (declaracao_variaveis)


State 16

    4 programa: cabecalho $@1 variaveis $@2 T_INICIO . lista_comandos $@3 T_FIM

    T_IDENTIF  deslocar, e ir ao estado 19
    T_LEIA     deslocar, e ir ao estado 20
    T_ESCREVA  deslocar, e ir ao estado 21
    T_ENQTO    deslocar, e ir ao estado 22
    T_SE       deslocar, e ir ao estado 23

    $padrão  reduzir usando a regra 14 (lista_comandos)

    lista_comandos  ir ao estado 24
    comando         ir ao estado 25
    entrada_saida   ir ao estado 26
    leitura         ir ao estado 27
    escrita         ir ao estado 28
    repeticao       ir ao estado 29
    selecao         ir ao estado 30
    atribuicao      ir ao estado 31


State 17

    8 declaracao_variaveis: declaracao_variaveis tipo lista_variaveis .
   12 lista_variaveis: lista_variaveis . T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 18

    $padrão  reduzir usando a regra 8 (declaracao_variaveis)


State 18

   12 lista_variaveis: lista_variaveis T_IDENTIF .

    $padrão  reduzir usando a regra 12 (lista_variaveis)


State 19

   32 atribuicao: T_IDENTIF . $@8 T_ATRIB $@9 expressao

    $padrão  reduzir usando a regra 30 ($@8)

    $@8  ir ao estado 32


State 20

   22 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 33


State 21

   23 escrita: T_ESCREVA . expressao

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 40
    termo      ir ao estado 41


State 22

   26 repeticao: T_ENQTO . $@4 expressao T_FACA $@5 lista_comandos T_FIMENQTO

    $padrão  reduzir usando a regra 24 ($@4)

    $@4  ir ao estado 42


State 23

   29 selecao: T_SE . expressao $@6 T_ENTAO lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 43
    termo      ir ao estado 41


State 24

    4 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos . $@3 T_FIM

    $padrão  reduzir usando a regra 3 ($@3)

    $@3  ir ao estado 44


State 25

   15 lista_comandos: comando . lista_comandos

    T_IDENTIF  deslocar, e ir ao estado 19
    T_LEIA     deslocar, e ir ao estado 20
    T_ESCREVA  deslocar, e ir ao estado 21
    T_ENQTO    deslocar, e ir ao estado 22
    T_SE       deslocar, e ir ao estado 23

    $padrão  reduzir usando a regra 14 (lista_comandos)

    lista_comandos  ir ao estado 45
    comando         ir ao estado 25
    entrada_saida   ir ao estado 26
    leitura         ir ao estado 27
    escrita         ir ao estado 28
    repeticao       ir ao estado 29
    selecao         ir ao estado 30
    atribuicao      ir ao estado 31


State 26

   16 comando: entrada_saida .

    $padrão  reduzir usando a regra 16 (comando)


State 27

   20 entrada_saida: leitura .

    $padrão  reduzir usando a regra 20 (entrada_saida)


State 28

   21 entrada_saida: escrita .

    $padrão  reduzir usando a regra 21 (entrada_saida)


State 29

   17 comando: repeticao .

    $padrão  reduzir usando a regra 17 (comando)


State 30

   18 comando: selecao .

    $padrão  reduzir usando a regra 18 (comando)


State 31

   19 comando: atribuicao .

    $padrão  reduzir usando a regra 19 (comando)


State 32

   32 atribuicao: T_IDENTIF $@8 . T_ATRIB $@9 expressao

    T_ATRIB  deslocar, e ir ao estado 46


State 33

   22 leitura: T_LEIA T_IDENTIF .

    $padrão  reduzir usando a regra 22 (leitura)


State 34

   43 termo: T_IDENTIF .

    $padrão  reduzir usando a regra 43 (termo)


State 35

   45 termo: T_V .

    $padrão  reduzir usando a regra 45 (termo)


State 36

   46 termo: T_F .

    $padrão  reduzir usando a regra 46 (termo)


State 37

   44 termo: T_NUMERO .

    $padrão  reduzir usando a regra 44 (termo)


State 38

   47 termo: T_NAO . termo

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    termo  ir ao estado 47


State 39

   48 termo: T_ABRE . expressao T_FECHA

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 48
    termo      ir ao estado 41


State 40

   23 escrita: T_ESCREVA expressao .
   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  deslocar, e ir ao estado 49
    T_DIV    deslocar, e ir ao estado 50
    T_MAIS   deslocar, e ir ao estado 51
    T_MENOS  deslocar, e ir ao estado 52
    T_MAIOR  deslocar, e ir ao estado 53
    T_MENOR  deslocar, e ir ao estado 54
    T_IGUAL  deslocar, e ir ao estado 55
    T_E      deslocar, e ir ao estado 56
    T_OU     deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 23 (escrita)


State 41

   42 expressao: termo .

    $padrão  reduzir usando a regra 42 (expressao)


State 42

   26 repeticao: T_ENQTO $@4 . expressao T_FACA $@5 lista_comandos T_FIMENQTO

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 58
    termo      ir ao estado 41


State 43

   29 selecao: T_SE expressao . $@6 T_ENTAO lista_comandos T_SENAO $@7 lista_comandos T_FIMSE
   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  deslocar, e ir ao estado 49
    T_DIV    deslocar, e ir ao estado 50
    T_MAIS   deslocar, e ir ao estado 51
    T_MENOS  deslocar, e ir ao estado 52
    T_MAIOR  deslocar, e ir ao estado 53
    T_MENOR  deslocar, e ir ao estado 54
    T_IGUAL  deslocar, e ir ao estado 55
    T_E      deslocar, e ir ao estado 56
    T_OU     deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 27 ($@6)

    $@6  ir ao estado 59


State 44

    4 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos $@3 . T_FIM

    T_FIM  deslocar, e ir ao estado 60


State 45

   15 lista_comandos: comando lista_comandos .

    $padrão  reduzir usando a regra 15 (lista_comandos)


State 46

   32 atribuicao: T_IDENTIF $@8 T_ATRIB . $@9 expressao

    $padrão  reduzir usando a regra 31 ($@9)

    $@9  ir ao estado 61


State 47

   47 termo: T_NAO termo .

    $padrão  reduzir usando a regra 47 (termo)


State 48

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao
   48 termo: T_ABRE expressao . T_FECHA

    T_VEZES  deslocar, e ir ao estado 49
    T_DIV    deslocar, e ir ao estado 50
    T_MAIS   deslocar, e ir ao estado 51
    T_MENOS  deslocar, e ir ao estado 52
    T_MAIOR  deslocar, e ir ao estado 53
    T_MENOR  deslocar, e ir ao estado 54
    T_IGUAL  deslocar, e ir ao estado 55
    T_E      deslocar, e ir ao estado 56
    T_OU     deslocar, e ir ao estado 57
    T_FECHA  deslocar, e ir ao estado 62


State 49

   33 expressao: expressao T_VEZES . expressao

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 63
    termo      ir ao estado 41


State 50

   34 expressao: expressao T_DIV . expressao

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 64
    termo      ir ao estado 41


State 51

   35 expressao: expressao T_MAIS . expressao

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 65
    termo      ir ao estado 41


State 52

   36 expressao: expressao T_MENOS . expressao

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 66
    termo      ir ao estado 41


State 53

   37 expressao: expressao T_MAIOR . expressao

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 67
    termo      ir ao estado 41


State 54

   38 expressao: expressao T_MENOR . expressao

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 68
    termo      ir ao estado 41


State 55

   39 expressao: expressao T_IGUAL . expressao

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 69
    termo      ir ao estado 41


State 56

   40 expressao: expressao T_E . expressao

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 70
    termo      ir ao estado 41


State 57

   41 expressao: expressao T_OU . expressao

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 71
    termo      ir ao estado 41


State 58

   26 repeticao: T_ENQTO $@4 expressao . T_FACA $@5 lista_comandos T_FIMENQTO
   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_FACA   deslocar, e ir ao estado 72
    T_VEZES  deslocar, e ir ao estado 49
    T_DIV    deslocar, e ir ao estado 50
    T_MAIS   deslocar, e ir ao estado 51
    T_MENOS  deslocar, e ir ao estado 52
    T_MAIOR  deslocar, e ir ao estado 53
    T_MENOR  deslocar, e ir ao estado 54
    T_IGUAL  deslocar, e ir ao estado 55
    T_E      deslocar, e ir ao estado 56
    T_OU     deslocar, e ir ao estado 57


State 59

   29 selecao: T_SE expressao $@6 . T_ENTAO lista_comandos T_SENAO $@7 lista_comandos T_FIMSE

    T_ENTAO  deslocar, e ir ao estado 73


State 60

    4 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos $@3 T_FIM .

    $padrão  reduzir usando a regra 4 (programa)


State 61

   32 atribuicao: T_IDENTIF $@8 T_ATRIB $@9 . expressao

    T_IDENTIF  deslocar, e ir ao estado 34
    T_V        deslocar, e ir ao estado 35
    T_F        deslocar, e ir ao estado 36
    T_NUMERO   deslocar, e ir ao estado 37
    T_NAO      deslocar, e ir ao estado 38
    T_ABRE     deslocar, e ir ao estado 39

    expressao  ir ao estado 74
    termo      ir ao estado 41


State 62

   48 termo: T_ABRE expressao T_FECHA .

    $padrão  reduzir usando a regra 48 (termo)


State 63

   33 expressao: expressao . T_VEZES expressao
   33          | expressao T_VEZES expressao .
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    $padrão  reduzir usando a regra 33 (expressao)


State 64

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   34          | expressao T_DIV expressao .
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    $padrão  reduzir usando a regra 34 (expressao)


State 65

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   35          | expressao T_MAIS expressao .
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  deslocar, e ir ao estado 49
    T_DIV    deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 35 (expressao)


State 66

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   36          | expressao T_MENOS expressao .
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  deslocar, e ir ao estado 49
    T_DIV    deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 36 (expressao)


State 67

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   37          | expressao T_MAIOR expressao .
   38          | expressao . T_MENOR expressao
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  deslocar, e ir ao estado 49
    T_DIV    deslocar, e ir ao estado 50
    T_MAIS   deslocar, e ir ao estado 51
    T_MENOS  deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 37 (expressao)


State 68

   33 expressao: expressao . T_VEZES expressao
   34          | expressao . T_DIV expressao
   35          | expressao . T_MAIS expressao
   36          | expressao . T_MENOS expressao
   37          | expressao . T_MAIOR expressao
   38          | expressao . T_MENOR expressao
   38          | expressao T_MENOR expressao .
   39          | expressao . T_IGUAL expressao
   40          | expressao . T_E expressao
   41          | expressao . T_OU expressao

    T_VEZES  deslocar, e ir ao estado 49
    T_DIV    deslocar, e ir ao estado 50
    T_MAIS   deslocar, e ir ao estado 51
    T_MENOS  deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 38 (expressao)


State 69
